--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,1 +1,25 @@
+.auth-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+}
 
+.auth-card {
+    width: 100%;
+    max-width: 400px;
+    background: rgb(255, 255, 255);
+    padding: 20px;
+    border-radius: 8px; 
+    box-shadow: 0 0 10px rgba(69, 67, 67, 0.1); 
+}
+
+.auth-title {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.auth-link {
+    text-align: center;
+    margin-top: 20px;
+}
